Created Folder Structure
Creata la struttura di cartelle in modo che solo package.json e Procfile siano alla root della repository, questi devono rimanere gli unici per tenere meglio organizzata la repo

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "engines": {
         "node": "16.x"
     },
-    "main": "start.js",
+    "main": "Software/FrontEnd/start.js",
     "scripts": {
-        "start": "node start.js"
+        "start": "node Software/FrontEnd/start.js"
     },
     "author": "Dawwo-15",
     "license": "MIT",
