--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "author": "Dawwo-15",
     "license": "MIT",
     "dependencies": {
-        "express": "^4.18.1"
+        "express": "^4.18.1",
+        "mongodb": "^4.6.0",
+        "mongoose": "^6.3.3"
     }
 }
