--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "main": "Software/FrontEnd/start.js",
     "scripts": {
         "start": "node Software/FrontEnd/start.js",
-        "connect": "node Software/BackEnd/atlas-interface.js"
+        "atlas-connection": "node Software/BackEnd/testing/test-atlas-connection.js"
     },
     "author": "Dawwo-15",
     "license": "MIT",
     "dependencies": {
         "express": "^4.18.1",
         "mongodb": "^4.6.0",
-        "mongoose": "^6.3.3"
+        "mongoose": "^6.3.4"
     },
     "devDependencies": {
         "dotenv": "^16.0.1"
