--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test:
-
+  
     runs-on: ubuntu-latest
     
     # This is used to load Environment-level secrets, from the specified environment.
@@ -42,14 +42,14 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
   
-#  release:
-#    runs-on: ubuntu-latest
-#    needs: test
-#    steps:
-#    - uses: actions/checkout@v2
-#    # https://github.com/marketplace/actions/deploy-to-heroku#procfile-passing
-#    - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-#      with:
-#        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-#        heroku_app_name: "easy-lib" #Must be unique in Heroku
-#        heroku_email: "marco.robol@unitn.it"
+  release:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+    - uses: actions/checkout@v2
+    # https://github.com/marketplace/actions/deploy-to-heroku
+    - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+      with:
+        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+        heroku_app_name: "omi-finder" #Must be unique in Heroku
+        heroku_email: "davide.mongera@studenti.unitn.it"
