--- a/Software/FrontEnd/omi-finder/package.json
+++ b/Software/FrontEnd/omi-finder/package.json
@@ -21,6 +21,7 @@
     },
     "scripts": {
         "start": "react-scripts start",
+        "install": "npm install",
         "build": "react-scripts build && move ./build ../",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
