--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     },
     "main": "Software/FrontEnd/web.js",
     "scripts": {
-        "start": "cd Software/FrontEnd/omi-finder && npm install && npm run build && cd .. && node web.js",
+        "start": "node web.js",
         "test": "jest",
+        "build" : "cd Software/FrontEnd/omi-finder && npm install && npm run build && cd .. ",
+        "heroku-postbuild":"npm build",
         "delete-build" : "rmdir Software\\FrontEnd\\build /s /q"
     },
     "author": "Dawwo-15",
