--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dependencies": {
         "express": "^4.18.1",
         "mongodb": "^4.6.0",
-        "mongoose": "^6.3.4"
+        "mongoose": "^6.3.4",
+        "mongoose-geojson-schema": "^2.2.2"
     },
     "devDependencies": {
         "dotenv": "^16.0.1",
