Rifacimento della pagina HOME ed integrazione del servizio di geolocalizzazione di GOOGLE MAPS

--- a/Software/FrontEnd/omi-finder/package.json
+++ b/Software/FrontEnd/omi-finder/package.json
@@ -3,7 +3,10 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.9.0",
+        "@emotion/styled": "^11.8.1",
         "@googlemaps/react-wrapper": "^1.1.33",
+        "@mui/material": "^5.8.2",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
         "@testing-library/user-event": "^13.5.0",
@@ -11,8 +14,10 @@
         "@types/node": "^16.11.35",
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.4",
+        "@types/react-geocode": "^0.2.0",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
+        "react-geocode": "^0.2.3",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "sass": "^1.51.0",
