--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "author": "Dawwo-15",
     "license": "MIT",
     "dependencies": {
+        "body-parser": "^1.20.0",
         "express": "^4.18.1",
-        "mongodb": "^4.6.0",
-        "mongoose": "^6.3.4",
         "jsonwebtoken": "^8.5.1",
-        "body-parser": "^1.20.0"
+        "mongodb": "^4.6.0",
+        "mongoose": "^6.3.4"
     },
     "devDependencies": {
         "dotenv": "^16.0.1",
