--- a/Software/FrontEnd/omi-finder/package.json
+++ b/Software/FrontEnd/omi-finder/package.json
@@ -11,10 +11,12 @@
         "@types/node": "^16.11.35",
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.4",
+        "crypto-js": "^4.1.1",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
+        "rxjs": "^7.5.5",
         "sass": "^1.51.0",
         "typescript": "^4.6.4",
         "web-vitals": "^2.1.4"
@@ -42,5 +44,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@types/crypto-js": "^4.1.1"
     }
 }
