--- a/Software/FrontEnd/omi-finder/package.json
+++ b/Software/FrontEnd/omi-finder/package.json
@@ -49,7 +49,8 @@
         "@types/crypto-js": "^4.1.1",
         "@types/jest": "^27.5.1",
         "@types/node": "^16.11.35",
+        "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.4",
-        "@types/react": "^18.0.9"
+        "@types/react-geocode": "^0.2.0"
     }
 }
