--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "express": "^4.18.1",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^4.6.0",
-        "mongoose": "^6.3.4"
+        "mongoose": "^6.3.4",
+        "swagger-jsdoc": "^6.2.1",
+        "swagger-ui-express": "^4.4.0"
     },
     "devDependencies": {
         "dotenv": "^16.0.1",
