Tentativo risoluzione problema type/crypto

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "scripts": {
         "start": "node Software/FrontEnd/web.js",
         "test": "jest --setupFiles dotenv/config",
-        "build": "cd Software/FrontEnd/omi-finder && npm install && npm run build && cd .. ",
+        "build": "cd Software/FrontEnd/omi-finder && npm install && npm i --save @types/crypto-js && npm run build && cd .. ",
         "heroku-postbuild": "npm run build",
         "delete-build": "rmdir Software\\FrontEnd\\build /s /q"
     },
