--- a/Software/FrontEnd/omi-finder/package.json
+++ b/Software/FrontEnd/omi-finder/package.json
@@ -19,7 +19,8 @@
         "rxjs": "^7.5.5",
         "sass": "^1.51.0",
         "typescript": "^4.6.4",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "@types/crypto-js": "^4.1.1"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -46,7 +47,6 @@
         ]
     },
     "devDependencies": {
-        "@types/crypto-js": "^4.1.1",
         "@types/jest": "^27.5.1",
         "@types/node": "^16.11.35",
         "@types/react": "^18.0.9",
